Se agrega boton para iniciar el juego, resto de estructura HTML sin funcionalidad aun

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cachipun</title>
-    <!-- <script defer src="./assets/js/script.js"></script> -->
+    <script defer src="./assets/js/script.js"></script>
     <link rel="stylesheet" href="./assets/css/styles.css">
  </head>
  <body>
+    <div class="iniciar">
+        <button id="botonInicio">INICIAR</button>
+    </div>
 
     <div class="botones">
         <h2>Elige tu opción</h2>
